# irishweather

./: .gitignore  README.md  pyproject.toml
irishweather/: get_weahter_data.py  main.py
